fix: adjusting css to address white space when cards deleted

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,6 +3,7 @@
   background-color: #fff;
   line-height: 0;
   position: relative;
+  height: 361px;
 }
 
 .card__delete-button {
