--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,7 +1,7 @@
 .content {
   display: grid;
   grid-template-columns: minmax(min-content, 880px);
-  height: 100%;
+  height: 100vh;
 }
 
 @media screen and (max-width: 617px) {
